--- a/index.html
+++ b/index.html
@@ -1,132 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Universo Travel</title>
-    <link rel="shortcut icon" href="./images/logouniversotravel.png">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/estilos.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Universo Travel</title>
+  <link rel="shortcut icon" href="./images/logouniversotravel.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/estilos.css">
 </head>
+
 <body>
-     <header>
-        <nav class="navbar navbar-expand-lg ">
-            <div class="container-fluid animate__animated animate__fadeInRight ">
-              <a class="navbar-brand" href="#"><img class="ms-4" src="./images/universotravel.png" width="400" height="50" alt=""></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div  class="collapse navbar-collapse " id="navbarSupportedContent">
-                  <ul id="links" class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                      <a class="nav-link me-3 " aria-current="page" href="#">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link me-3 " href="#">Conózcanos</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link " href="#">Galería de fotos</a>
-                    </li>
-                  </ul> 
-              </div>
-            </div>
-          </nav>
-     </header>
-     <main>
-      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./images/micro.jpg" height="600" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Traslados Empresariales</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./images/micro.jpg" height="600" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./images/micro.jpg" height="600" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
+  <header>
+    <nav class="navbar navbar-expand-lg ">
+      <div class="container-fluid animate__animated animate__fadeInRight ">
+        <a class="navbar-brand" href="#"><img class="ms-4" src="./images/universotravel.png" width="400" height="50"
+            alt=""></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-     </main>
-     <div class="container">
-          <div class="card">
-              <div class="face face1">
-                    <div class="content">
-                        <i class="fab fa-windows"></i>
-                        <h3>windows</h3>
-                    </div>
-              </div>
-              <div class="face face2">
-                <div class="content">
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, saepe!</p>
-                </div>
-              </div>
-          </div>
-          <div class="card">
-            <div class="face face1">
-                  <div class="content">
-                      <i class="fab fa-windows"></i>
-                      <h3>windows</h3>
-                  </div>
-            </div>
-            <div class="face face2">
-              <div class="content">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, saepe!</p>
-              </div>
-            </div>
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+          <ul id="links" class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link me-3 " aria-current="page" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link me-3 " href="#conocenos">Conocenos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="#">Galería de fotos</a>
+            </li>
+          </ul>
         </div>
-        <div class="card">
-          <div class="face face1">
-                <div class="content">
-                    <i class="fab fa-windows"></i>
-                    <h3>windows</h3>
-                </div>
-          </div>
-          <div class="face face2">
-            <div class="content">
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, saepe!</p>
-            </div>
-          </div>
       </div>
-    
+    </nav>
+  </header>
+  <div class="logoWp"><a href=""><img src="./images/whatsapp.png" width="100" height="100" alt=""></a></div>
+  <main>
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./images/micro.jpg" height="600" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Traslados Empresariales</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./images/micro.jpg" height="600" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./images/micro.jpg" height="600" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </main>
+  <div class="cardContainer ">
+    <h2>¿Por qué elegirnos?</h2>
+    <div class="container ">
+      <div class="card">
+        <div class="face face1">
+          <div class="content">
+            <img src="./images/interiores3.jpg" width="300" height="200" alt="">
+          </div>
+        </div>
+        <div class="face face2">
+          <div class="content">
+            <h4>Confort</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, saepe!</p>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="face face1">
+          <div class="content">
+            <img src="./images/interiores3.jpg" width="300" height="200" alt="">
+          </div>
+        </div>
+        <div class="face face2">
+          <div class="content">
+            <h4>Puntualidad</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, saepe!</p>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="face face1">
+          <div class="content">
+            <img src="./images/interiores3.jpg" width="300" height="200" alt="">
+          </div>
+        </div>
+        <div class="face face2">
+          <div class="content">
+            <h4>Seguridad</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, saepe!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid" id="conocenos">
+    <h2 class="conocenosTitulo">Conocenos</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem facere fugit, doloremque quisquam facilis vero
+      libero, ea nemo, quod repudiandae assumenda totam saepe fugiat corrupti? Totam dignissimos iste facilis dolorum
+      amet perspiciatis unde quis vel at, quos iure doloremque asperiores itaque? Impedit, dolor quidem libero velit
+      nihil quod illum laboriosam?</p>
+  </div>
+
+  <footer class="container-fluid" id="footer">
+    <p>Universo Travel - Todos los derechos reservados</p>
+    <div class="redes">
+      <ul>
+        <li>
+          <a href=""><img src="./images/instagram.svg" alt=""></a>
+        </li>
+        <li>
+          <a href=""><img src="./images/whatsapp.svg" alt=""></a>
+        </li>
+      </ul>
+    </div>
+
+  </footer>
 
 
-     </div>
-     
-  
 
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
