--- a/index.html
+++ b/index.html
@@ -128,12 +128,11 @@
       <div class="card">
         <div class="face face1">
           <div class="content">
-            <img src="./images/confort23.jpg" width="300" height="200" alt="">
+            <img src="./images/confortt.jpg" width="300" height="200" alt="">
           </div>
         </div>
         <div class="face face2">
           <div class="content">
-            <h4>Confort</h4>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, saepe!</p>
           </div>
         </div>
@@ -146,7 +145,6 @@
         </div>
         <div class="face face2">
           <div class="content">
-            <h4>Puntualidad</h4>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, saepe!</p>
           </div>
         </div>
@@ -159,7 +157,6 @@
         </div>
         <div class="face face2">
           <div class="content">
-            <h4>Seguridad</h4>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, saepe!</p>
           </div>
         </div>
@@ -178,17 +175,16 @@
 
 
   <footer class="container-fluid" id="footer">
-    <p>Universo Travel - Todos los derechos reservados</p>
     <div class="redes">
-      <ul>
-        <li>
           <a href=""><img src="./images/instagram.svg" alt=""></a>
-        </li>
-        <li>
           <a href=""><img src="./images/whatsapp.svg" alt=""></a>
-        </li>
-      </ul>
     </div>
+    <div class="footerFinal">
+      <img src="./images/logouniversotravel.png" width="100" height="60" alt="">
+      <p>Universo Travel - Todos los derechos reservados - Diseño por <a href="www.linkedin.com/in/ 
+        tomaslferreyra" target="_blank">Tomás Ferreyra</a></p>
+    </div>
+    
 
   </footer>
 
