--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
               <a class="nav-link me-3 " href="#conocenos">Conocenos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="#">Galería de fotos</a>
+              <a class="nav-link " href="./pages/imagenes.html">Galería de fotos</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
-  <div class="logoWp"><a href=""><img src="./images/whatsapp.png" width="100" height="100" alt=""></a></div>
+  <div class="logoWp"><a href=""><img src="./images/wspanimado-unscreen.gif" width="100" height="100" alt=""></a></div>
   <main>
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
       <div class="carousel-indicators">
@@ -85,20 +85,20 @@
     </div>
   </main>
   <section>
-    <h2>Algunos de nuestros destinos</h2>
+    <h2 class="mt-4">Nuestros servicios</h2>
     <div class="card-group">
       <div class="card">
-        <img src="./images/micro1.PNG" class="card-img-top" alt="...">
+        <img src="./images/rutanorte.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Traslados Media y Larga Distancia</h5>
+          <h5 class="card-title">Traslados Corta, Media y Larga Distancia</h5>
 
         </div>
 
       </div>
       <div class="card">
-        <img src="./images/mdq.jpg" class="card-img-top" alt="...">
+        <img src="./images/bsas.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Costa Atlántica</h5>
+          <h5 class="card-title">City Tours, Turismo Receptivo, Congresos, Casamientos.</h5>
 
         </div>
 
@@ -106,7 +106,7 @@
       <div class="card">
         <img src="./images/lapampa4.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">La Pampa</h5>
+          <h5 class="card-title">Excursiones, Competiciones Deportivas. </h5>
 
         </div>
 
@@ -115,15 +115,30 @@
   </section>
 
   <div class="container-fluid" id="conocenos">
-    <h2 class="conocenosTitulo">Conocenos</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem facere fugit, doloremque quisquam facilis vero
-      libero, ea nemo, quod repudiandae assumenda totam saepe fugiat corrupti? Totam dignissimos iste facilis dolorum
-      amet perspiciatis unde quis vel at, quos iure doloremque asperiores itaque? Impedit, dolor quidem libero velit
-      nihil quod illum laboriosam?</p>
+    <div class="row">
+      <div class="col-lg-6"> 
+        <h2 class="conocenosTitulo">Conocenos</h2>
+        <p>Somos una empresa de turismo con más de años de experiencia en el rubro, nuestro objetivo es brindar calidad y seguridad a nuestros clientes, navega nuestro sitio para conocer más.</p>
+      </div>
+      <div id="carouselExampleSlidesOnly " class="carousel slide col-lg-6" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./images/lapampa4.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./images/micro1.PNG" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./images/santiago.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+      </div>
+    </div>
+    
   </div>
 
   <div class="cardContainer ">
-    <h2>¿Por qué elegirnos?</h2>
+    <h2 class="mt-4">¿Por qué elegirnos?</h2>
     <div class="container ">
       <div class="card">
         <div class="face face1">
