--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="card">
         <img src="./images/bsas.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">City Tours, Turismo Receptivo, Congresos, Casamientos.</h5>
+          <h5 class="card-title">City Tours.</h5>
 
         </div>
 
@@ -106,7 +106,7 @@
       <div class="card">
         <img src="./images/lapampa4.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Excursiones, Competiciones Deportivas. </h5>
+          <h5 class="card-title">Excursiones, Competiciones Deportivas, Congresos, Casamientos. </h5>
 
         </div>
 
@@ -116,11 +116,11 @@
 
   <div class="container-fluid" id="conocenos">
     <div class="row">
-      <div class="col-lg-6"> 
+      <div class="col-lg-7"> 
         <h2 class="conocenosTitulo">Conocenos</h2>
         <p>Somos una empresa de turismo con más de años de experiencia en el rubro, nuestro objetivo es brindar calidad y seguridad a nuestros clientes, navega nuestro sitio para conocer más.</p>
       </div>
-      <div id="carouselExampleSlidesOnly " class="carousel slide col-lg-6" data-bs-ride="carousel">
+      <div id="carouselExampleSlidesOnly " class="carousel slide col-lg-5" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="./images/lapampa4.jpg" class="d-block w-100" alt="...">
@@ -185,25 +185,24 @@
 
 
 
-
-
-
-
-
-
-
-
-  <footer class="container-fluid" id="footer">
-    <div class="redes">
-      <a href=""><img src="./images/whatsapp.png" alt="Logo whatsapp">WhatsApp</a>
-      <a href=""><img src="./images/logoig.png" alt="Logo Instagram">Instagram</a>
-
+  <footer class="container-fluid pt-4 pb-4" id="footer">
+    <div class="row">
+      <div class="footerFinal col-lg-8">
+        <img src="./images/logouniversotravel.png" width="100" height="60" alt="">
+        <p>Universo Travel - Todos los derechos reservados</p>
+      </div>
+        <div class="redes col-lg-3">
+            <a href="">Seguinos<img class="ms-4" src="./images/logoig.png" alt="Logo Instagram"></a>
+      </div>
     </div>
-    <div class="footerFinal">
-      <img src="./images/logouniversotravel.png" width="100" height="60" alt="">
-      <p>Universo Travel - Todos los derechos reservados - Diseño por <a href="www.linkedin.com/in/ 
-        tomaslferreyra" target="_blank">Tomás Ferreyra</a></p>
+    <div class="text-center">
+      Diseño por<a href="www.linkedin.com/in/ 
+      tomaslferreyra" target="_blank">  Tomás Ferreyra</a>
     </div>
+    
+   
+    
+  
 
 
   </footer>
