--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="shortcut icon" href="./images/logouniversotravel.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/estilos.css">
 </head>
 
@@ -51,21 +52,21 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./images/micro1.PNG" height="600" class="d-block w-100" alt="...">
+          <img src="./images/micro1.PNG" height="650" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Traslados Empresariales</h5>
             <p>Some representative placeholder content for the first slide.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./images/micro.jpg" height="600" class="d-block w-100" alt="...">
+          <img src="./images/micro.jpg" height="650" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Second slide label</h5>
             <p>Some representative placeholder content for the second slide.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./images/micro.jpg" height="600" class="d-block w-100" alt="...">
+          <img src="./images/micro.jpg" height="650" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
             <p>Some representative placeholder content for the third slide.</p>
@@ -86,8 +87,8 @@
   </main>
   <section>
     <h2 class="mt-4">Nuestros servicios</h2>
-    <div class="card-group">
-      <div class="card">
+    <div class="card-group ">
+      <div data-aos="fade-left" class="card">
         <img src="./images/rutanorte.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Traslados Corta, Media y Larga Distancia</h5>
@@ -95,7 +96,7 @@
         </div>
 
       </div>
-      <div class="card">
+      <div data-aos="fade-right" class="card">
         <img src="./images/bsas.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">City Tours.</h5>
@@ -103,7 +104,7 @@
         </div>
 
       </div>
-      <div class="card">
+      <div data-aos="fade-up" class="card">
         <img src="./images/lapampa4.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Excursiones, Competiciones Deportivas, Congresos, Casamientos. </h5>
@@ -116,7 +117,7 @@
 
   <div class="container-fluid" id="conocenos">
     <div class="row">
-      <div class="col-lg-7"> 
+      <div class="col-lg-7 "> 
         <h2 class="conocenosTitulo">Conocenos</h2>
         <p>Somos una empresa de turismo con más de años de experiencia en el rubro, nuestro objetivo es brindar calidad y seguridad a nuestros clientes, navega nuestro sitio para conocer más.</p>
       </div>
@@ -140,7 +141,7 @@
   <div class="cardContainer ">
     <h2 class="mt-4">¿Por qué elegirnos?</h2>
     <div class="container ">
-      <div class="card">
+      <div  data-aos="flip-up" class="card">
         <div class="face face1">
           <div class="content">
             <img src="./images/confortt.jpg" width="300" height="200" alt="">
@@ -156,7 +157,7 @@
           </div>
         </div>
       </div>
-      <div class="card">
+      <div  data-aos="flip-up" class="card">
         <div class="face face1">
           <div class="content">
             <img src="./images/interiores3.jpg" width="300" height="200" alt="">
@@ -168,7 +169,7 @@
           </div>
         </div>
       </div>
-      <div class="card">
+      <div  data-aos="flip-up" class="card">
         <div class="face face1">
           <div class="content">
             <img src="./images/interiores3.jpg" width="300" height="200" alt="">
@@ -211,8 +212,11 @@
 
 
 
-
-
+  
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
