--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
     </nav>
   </header>
-  <div class="logoWp"><a href=""><img src="./images/wspanimado-unscreen.gif" width="100" height="100" alt=""></a></div>
+  <div class="logoWp"><a href="./index.html"><img src="./images/wspanimado-unscreen.gif" width="100" height="100" alt=""></a></div>
   <main>
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
       <div class="carousel-indicators">
