--- a/pages/imagenes.html
+++ b/pages/imagenes.html
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar navbar-expand-lg ">
       <div class="container-fluid animate__animated animate__fadeInRight ">
-        <a class="navbar-brand" href="#"><img class="ms-4" src="../images/universotravel.png" width="400" height="50"
+        <a class="navbar-brand" href="../index.html"><img class="ms-4" src="../images/universotravel.png" width="400" height="50"
             alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
