--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div data-aos="flip-up" class="card">
         <div class="face face1">
           <div class="content">
-            <img src="./images/confortt.jpg" width="300" height="200" alt="">
+            <img src="./images/asientoConfort.jpg"" width="350" height="350" alt="">
           </div>
         </div>
         <div class="face face2">
@@ -159,7 +159,7 @@
       <div data-aos="flip-up" class="card">
         <div class="face face1">
           <div class="content">
-            <img src="./images/interiores3.jpg" width="300" height="200" alt="">
+            <img src="./images/asientoConfort.jpg" width="350" height="350" alt="">
           </div>
         </div>
         <div class="face face2">
@@ -171,7 +171,7 @@
       <div data-aos="flip-up" class="card">
         <div class="face face1">
           <div class="content">
-            <img src="./images/interiores3.jpg" width="300" height="200" alt="">
+            <img src="./images/asientoConfort.jpg" width="350" height="350" alt="">
           </div>
         </div>
         <div class="face face2">
