changing bakcground to black

--- a/index.html
+++ b/index.html
@@ -185,16 +185,18 @@
 
 
 
-  <footer class="container-fluid  pb-4" id="footer">
+  <footer class="container-fluid" id="footer">
     <div class="row">
-      <div class="footerFinal col-lg-4 mt-3">
-        <img src="./images/logouniversotravel.png" width="120" height="80" alt="">
+      <div class="footerFinal col-lg-4">
+        <p class="mt-5">Universo Travel ® - 2022</p>
+        <img class="mb-4" src="./images/logouniversotravel.png" width="120" height="80" alt="">
+        
       </div>
       <div class="contact col-lg-4">
-        <p>Contacto</p>
+        <p class="mb-4" >Contacto</p>
         <a href=""><img class="me-2" src="./images/telefono (1).svg" alt="Logo Instagram">11-5855-0197</a>
       </div>
-      <div class="redes col-lg-4 pt-3">
+      <div class="redes col-lg-4">
         <p>Seguinos</p>
         <div>
           <a href=""><img class="ms-4" src="./images/logoig.png" alt="Logo Instagram"></a>
@@ -202,7 +204,7 @@
         </div>
       </div>
     </div>
-    <div class="text-center mt-2">
+    <div id="diseño" class="text-center">
       Diseño por<a href="www.linkedin.com/in/ 
       tomaslferreyra" target="_blank"> Tomás Ferreyra</a>
     </div>
