--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
     </div>
   </section>
 
-  <div class="container-fluid" id="conocenos">
+  <div data-aos="fade-up"
+  data-aos-duration="2000" class="container-fluid" id="conocenos">
     <div class="row">
       <div class="col-lg-7 ">
         <h2 class="conocenosTitulo">Conocenos</h2>
