changing meet us

--- a/index.html
+++ b/index.html
@@ -114,12 +114,13 @@
   </section>
 
   <div data-aos="fade-up"
-  data-aos-duration="2000" class="container-fluid" id="conocenos">
-    <div class="row">
-      <div class="col-lg-7 ">
+  data-aos-duration="2000" class="container-fluid " id="conocenos">
+    <div class="row d-flex justify-content-center">
+      <div class="col-lg-4 ">
         <h2 class="conocenosTitulo">Conocenos</h2>
         <p>Somos una empresa de turismo con más de años de experiencia en el rubro, nuestro objetivo es brindar calidad
           y seguridad a nuestros clientes, navega nuestro sitio para conocer más.</p>
+          <button type="button" class="btn btn-outline-dark"><a href="./pages/imagenes.html"> Nuestras unidades</a></button>
       </div>
       <div id="carouselExampleSlidesOnly " class="carousel slide col-lg-5" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -144,7 +145,7 @@
       <div data-aos="flip-up" class="card">
         <div class="face face1">
           <div class="content">
-            <img src="./images/asientoConfort.jpg"" width="350" height="350" alt="">
+            <img src="./images/asientoConfort.jpg" width="350" height="370" alt="">
           </div>
         </div>
         <div class="face face2">
@@ -160,7 +161,7 @@
       <div data-aos="flip-up" class="card">
         <div class="face face1">
           <div class="content">
-            <img src="./images/asientoConfort.jpg" width="350" height="350" alt="">
+            <img src="./images/asientoConfort.jpg" width="350" height="370" alt="">
           </div>
         </div>
         <div class="face face2">
@@ -172,7 +173,7 @@
       <div data-aos="flip-up" class="card">
         <div class="face face1">
           <div class="content">
-            <img src="./images/asientoConfort.jpg" width="350" height="350" alt="">
+            <img src="./images/asientoConfort.jpg" width="350" height="370" alt="">
           </div>
         </div>
         <div class="face face2">
