adding logo services

--- a/index.html
+++ b/index.html
@@ -114,16 +114,16 @@
   </section>
 
   <div data-aos="fade-up"
-  data-aos-duration="2000" class="container-fluid " id="conocenos">
-    <div class="row d-flex justify-content-center">
-      <div class="col-lg-4 ">
+  data-aos-duration="2000" class="container" id="conocenos">
+    <div class="row">
+      <div class="col-lg-6 ">
         <h2 class="conocenosTitulo">Conocenos</h2>
         <p>Somos una empresa de turismo con más de años de experiencia en el rubro, nuestro objetivo es brindar calidad
           y seguridad a nuestros clientes, navega nuestro sitio para conocer más.</p>
-          <button type="button" class="btn btn-outline-dark"><a href="./pages/imagenes.html"> Nuestras unidades</a></button>
+          <button type="button" class="btn btn-outline-dark mt-5"><a href="./pages/imagenes.html"> Nuestras unidades</a></button>
       </div>
-      <div id="carouselExampleSlidesOnly " class="carousel slide col-lg-5" data-bs-ride="carousel">
-        <div class="carousel-inner">
+      <div id="carouselExampleSlidesOnly " class="carousel slide col-lg-6" data-bs-ride="carousel">
+        <div class="carousel-inner mt-4">
           <div class="carousel-item active">
             <img src="./images/lapampa4.jpg" class="d-block w-100" alt="...">
           </div>
@@ -138,11 +138,20 @@
     </div>
 
   </div>
+  <div id="logoServices" class="container-fluid mt-5">
+    <h2 class="text-center mt-5 mb-5">Servicios de nuestras unidades</h2>
+    <div class="row d-flex justify-content-evenly mb-5">
+      <img class="col-lg-3" data-aos="flip-up" data-aos-duration="500" src="./images/coffee-svgrepo-com.svg" alt="">
+      <img class="col-lg-3" data-aos="flip-up" data-aos-duration="1000" src="./images/device-hdtv-svgrepo-com.svg" alt="">
+      <img class="col-lg-3" data-aos="flip-up" data-aos-duration="1500" src="./images/image-removebg-preview (2).png" alt="">
+      <img class="col-lg-3" data-aos="flip-up" data-aos-duration="2000" src="./images/toilet-svgrepo-com.svg" alt="">
+    </div>
 
+  </div>
   <div class="cardContainer ">
     <h2 class="mt-4">¿Por qué elegirnos?</h2>
     <div class="container ">
-      <div data-aos="flip-up" class="card">
+      <div data-aos="zoom-in-right" class="card">
         <div class="face face1">
           <div class="content">
             <img src="./images/asientoConfort.jpg" width="350" height="370" alt="">
@@ -158,7 +167,7 @@
           </div>
         </div>
       </div>
-      <div data-aos="flip-up" class="card">
+      <div data-aos="zoom-in-right" class="card">
         <div class="face face1">
           <div class="content">
             <img src="./images/asientoConfort.jpg" width="350" height="370" alt="">
@@ -170,7 +179,7 @@
           </div>
         </div>
       </div>
-      <div data-aos="flip-up" class="card">
+      <div data-aos="zoom-in-left" class="card">
         <div class="face face1">
           <div class="content">
             <img src="./images/asientoConfort.jpg" width="350" height="370" alt="">
