changing background color

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   </section>
 
   <div data-aos="fade-up"
-  data-aos-duration="1500" class="container" id="conocenos">
+  data-aos-duration="1500" class="container-fluid" id="conocenos">
     <div class="row">
       <div class="col-lg-6 ">
         <h2 class="conocenosTitulo">Conocenos</h2>
