--- a/pages/imagenes.html
+++ b/pages/imagenes.html
@@ -41,12 +41,12 @@
   </header>
   <div class="container-fluid">
     <div class="row g-3 pb-3">
-      
-        <img class="col-lg-5" src="../images/bsas.jpg" alt="">
-        <img class="col-lg-7" src="../images/interiores3.jpg" alt="">     
-        <img class="col-lg-5" src="../images/santiago.jpg" alt="">
-        <img class="col-lg-7" src="../images/micro.jpg" alt="">      
         <img class="col-lg-7" src="../images/micro1.PNG" alt="">
+        <img class="col-lg-5" src="../images/asiento22.jpg" alt="">     
+        <img class="col-lg-6" src="../images/santiago.jpg" alt="">
+        <img class="col-lg-6" height="500" src="../images/usb.jpg" alt="">      
+        <img class="col-lg-7" src="../images/micro1.PNG" alt="">
+        <img class="col-lg-7" src="../images/bsas.jpg" alt="">
         <img class="col-lg-5" src="../images/confort1.jpg" alt="">
      
     </div>
