changing background colours

--- a/pages/imagenes.html
+++ b/pages/imagenes.html
@@ -61,20 +61,35 @@
 
 
 
-  <footer class="container-fluid pt-4 pb-4" id="footer">
+  <footer class="container-fluid" id="footer">
     <div class="row">
-      <div class="footerFinal col-lg-8">
-        <img src="../images/logouniversotravel.png" width="100" height="60" alt="">
-        <p>Universo Travel - Todos los derechos reservados</p>
+      <div class="footerFinal col-lg-4">
+        <p class="mt-5">Universo Travel ® - 2022</p>
+        <img class="mb-4" src="../images/logouniversotravel.png" width="120" height="80" alt="">
+        
       </div>
-        <div class="redes col-lg-3">
-            <a href="">Seguinos<img class="ms-4" src="../images/logoig.png" alt="Logo Instagram"></a>
+      <div class="contact col-lg-4">
+        <p class="mb-4" >Contacto</p>
+        <a href=""><img class="me-2" src="../images/telefono (1).svg" alt="Logo Instagram">11-5855-0197</a>
+      </div>
+      <div class="redes col-lg-4">
+        <p>Seguinos</p>
+        <div>
+          <a href=""><img class="ms-4" src="../images/logoig.png" alt="Logo Instagram"></a>
+          <a href=""><img class="ms-4" src="../images/facebook.png" alt="Logo Facebook"></a>
+        </div>
       </div>
     </div>
-    <div class="text-center">
+    <div id="diseño" class="text-center">
       Diseño por<a href="www.linkedin.com/in/ 
-      tomaslferreyra" target="_blank">  Tomás Ferreyra</a>
+      tomaslferreyra" target="_blank"> Tomás Ferreyra</a>
     </div>
+
+
+
+
+
+
   </footer>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
