see more on images

--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
       </div>
     </div>
   </section>
-  <hr/>
+
+  <hr data-aos="fade-right" />
+
   <div data-aos="fade-up"
   data-aos-duration="1500" class="container-fluid" id="conocenos">
     <div class="row">
@@ -137,7 +139,9 @@
         </div>
       </div>
     </div>
-    <hr/>
+
+    <hr data-aos="fade-left"/>
+  
   </div>
   <div id="logoServices" class="container-fluid mt-5">
     <h2 class="text-center mt-5 mb-3">Servicios de nuestras unidades</h2>
@@ -147,7 +151,9 @@
       <img class="col-lg-3" data-aos="flip-up" data-aos-duration="1500" src="./images/image-removebg-preview (2).png" alt="">
       <img class="col-lg-3" data-aos="flip-up" data-aos-duration="2000" src="./images/toilet-svgrepo-com.svg" alt="">
     </div>
-    <hr/>
+
+    <hr data-aos="fade-right"/>
+
   </div>
   <div class="cardContainer ">
     <h2 class="mt-4">¿Por qué elegirnos?</h2>
