content card items

--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
             <ul>
               <li><img src="./images/check.svg" width="20" height="20" alt=""> Ambiente climatizado</li>
               <li><img src="./images/check.svg" width="20" height="20" alt="">Carga USB</li>
+              <li><img src="./images/check.svg" width="20" height="20" alt="">Servicio de cafetería</li>
+              <li><img src="./images/check.svg" width="20" height="20" alt="">TV LCD</li>
+              <li><img src="./images/check.svg" width="20" height="20" alt="">Aseos</li>
             </ul>
           </div>
         </div>
