adding new navbar with js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg ">
+    <nav id="nav" class="navbar navbar-expand-lg ">
       <div class="container-fluid animate__animated animate__fadeInRight ">
         <a class="navbar-brand" href="#"><img class="ms-4" src="./images/universotravel.png" width="400" height="50"
             alt=""></a>
@@ -53,15 +53,15 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./images/micro1.PNG" height="650" class="d-block w-100" alt="...">
+          <img src="./images/micro1.PNG" height="720" class="d-block w-100" alt="...">
 
         </div>
         <div class="carousel-item">
-          <img src="./images/micro.jpg" height="650" class="d-block w-100" alt="...">
+          <img src="./images/micro.jpg" height="720" class="d-block w-100" alt="...">
 
         </div>
         <div class="carousel-item">
-          <img src="./images/micro.jpg" height="650" class="d-block w-100" alt="...">
+          <img src="./images/micro.jpg" height="720" class="d-block w-100" alt="...">
 
         </div>
       </div>
@@ -247,6 +247,7 @@
     AOS.init();
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
