--- a/pages/imagenes.html
+++ b/pages/imagenes.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="stylesheet" href="../css/estilos.css">
+  <link rel="stylesheet" href="../css/estilosImg.css">
 </head>
 
 <body>
@@ -40,7 +40,7 @@
     </nav>
   </header>
   <div class="container-fluid">
-    <div class="row g-3 pb-3">
+    <div class="row g-2 mt-3  pb-3">
         <img class="col-lg-7" src="../images/micro1.PNG" alt="">
         <img class="col-lg-5" src="../images/asiento22.jpg" alt="">     
         <img class="col-lg-6" src="../images/santiago.jpg" alt="">
