--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./images/micro1.PNG" height="720" class="d-block w-100" alt="...">
+          <img src="./images/microfondo-5000x2600.jpg" height="720" class="d-block w-100" alt="...">
 
         </div>
         <div class="carousel-item">
