--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./images/microfondo-5000x2600.jpg" height="720" class="d-block w-100" alt="...">
+          <img src="./images/microfondo.jpg" height="720" class="d-block w-100" alt="...">
 
         </div>
         <div class="carousel-item">
@@ -166,9 +166,8 @@
         </div>
         <div class="face face2">
           <div class="content">
-            <p>Contamos con todas las comodidades para una mejor experiencia</p>
             <ul>
-              <li><img src="./images/check.svg" width="20" height="20" alt=""> Ambiente climatizado</li>
+              <li class="mt-5"><img src="./images/check.svg" width="20" height="20" alt=""> Ambiente climatizado</li>
               <li><img src="./images/check.svg" width="20" height="20" alt="">Carga USB</li>
               <li><img src="./images/check.svg" width="20" height="20" alt="">Servicio de cafetería</li>
               <li><img src="./images/check.svg" width="20" height="20" alt="">TV LCD</li>
