--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
     </div>
   </section>
 
-  <hr />
+  
 
-  <div data-aos="fade-up"
-  data-aos-duration="1500" class="container-fluid" id="conocenos">
+  <div data-aos="fade-left"
+  data-aos-duration="1000" class="container-fluid" id="conocenos">
     <div class="row">
       <div class="col-lg-6 ">
         <h2 class="conocenosTitulo">Conocenos</h2>
@@ -140,11 +140,10 @@
       </div>
     </div>
 
-    <hr/>
   
   </div>
-  <div id="logoServices" class="container-fluid mt-5">
-    <h2 class="text-center mt-5 mb-3">Servicios de nuestras unidades</h2>
+  <div id="logoServices" class="container-fluid">
+    <h2 class="text-center pt-4 mb-3">Servicios de nuestras unidades</h2>
     <div class="row d-flex justify-content-evenly mb-5">
       <img class="col-lg-3" data-aos="flip-up" data-aos-duration="500" src="./images/coffee-svgrepo-com.svg" alt="">
       <img class="col-lg-3" data-aos="flip-up" data-aos-duration="1000" src="./images/device-hdtv-svgrepo-com.svg" alt="">
@@ -152,7 +151,7 @@
       <img class="col-lg-3" data-aos="flip-up" data-aos-duration="2000" src="./images/toilet-svgrepo-com.svg" alt="">
     </div>
 
-    <hr/>
+  
 
   </div>
   <div class="cardContainer ">
