--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <hr/>
   
   </div>
-  <div id="logoServices" class="container-fluid mt-5">
+  <div id="logoServices" class="container-fluid">
     <h2 class="text-center mt-5 mb-3">Servicios de nuestras unidades</h2>
     <div class="row d-flex justify-content-evenly mb-5">
       <img class="col-lg-3" data-aos="flip-up" data-aos-duration="500" src="./images/coffee-svgrepo-com.svg" alt="">
