--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
     </div>
   </section>
 
-  <hr />
+ 
 
-  <div data-aos="fade-up"
-  data-aos-duration="1500" class="container-fluid" id="conocenos">
+  <div data-aos="fade-left"
+  data-aos-duration="1000" class="container-fluid" id="conocenos">
     <div class="row">
       <div class="col-lg-6 ">
         <h2 class="conocenosTitulo">Conocenos</h2>
@@ -140,7 +140,7 @@
       </div>
     </div>
 
-    <hr/>
+
   
   </div>
   <div id="logoServices" class="container-fluid">
@@ -152,7 +152,7 @@
       <img class="col-lg-3" data-aos="flip-up" data-aos-duration="2000" src="./images/toilet-svgrepo-com.svg" alt="">
     </div>
 
-    <hr/>
+
 
   </div>
   <div class="cardContainer ">
