--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
  
 
-  <div data-aos="fade-left"
+  <div data-aos="fade-up"
   data-aos-duration="1000" class="container-fluid" id="conocenos">
     <div class="row">
       <div class="col-lg-6 ">
@@ -144,7 +144,7 @@
   
   </div>
   <div id="logoServices" class="container-fluid">
-    <h2 class="text-center mt-5 mb-3">Servicios de nuestras unidades</h2>
+    <h2 class="text-center p-4 mb-3">Servicios de nuestras unidades</h2>
     <div class="row d-flex justify-content-evenly mb-5">
       <img class="col-lg-3" data-aos="flip-up" data-aos-duration="500" src="./images/coffee-svgrepo-com.svg" alt="">
       <img class="col-lg-3" data-aos="flip-up" data-aos-duration="1000" src="./images/device-hdtv-svgrepo-com.svg" alt="">
