background general color

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <h2 class="conocenosTitulo">Conocenos</h2>
         <p>Somos una empresa de turismo con más de años de experiencia en el rubro, nuestro objetivo es brindar calidad
           y seguridad a nuestros clientes, navega nuestro sitio para conocer más.</p>
-          <button type="button" class="btn btn-outline-dark mt-5"><a href="./pages/imagenes.html"> Nuestras unidades</a></button>
+          <button type="button" class="btn btn-danger mt-5"><a href="./pages/imagenes.html"> Nuestras unidades</a></button>
       </div>
       <div id="carouselExampleSlidesOnly " class="carousel slide col-lg-6" data-bs-ride="carousel">
         <div class="carousel-inner mt-4">
@@ -145,7 +145,7 @@
   </div>
   <div id="logoServices" class="container-fluid">
     <h2 class="text-center p-4 mb-3">Servicios de nuestras unidades</h2>
-    <div class="row d-flex justify-content-evenly mb-5">
+    <div class="row d-flex justify-content-evenly pb-5">
       <img class="col-lg-3" data-aos="flip-up" data-aos-duration="500" src="./images/coffee-svgrepo-com.svg" alt="">
       <img class="col-lg-3" data-aos="flip-up" data-aos-duration="1000" src="./images/device-hdtv-svgrepo-com.svg" alt="">
       <img class="col-lg-3" data-aos="flip-up" data-aos-duration="1500" src="./images/image-removebg-preview (2).png" alt="">
@@ -167,11 +167,11 @@
         <div class="face face2">
           <div class="content">
             <ul>
-              <li class="mt-5"><img src="./images/check.svg" width="20" height="20" alt=""> Ambiente climatizado</li>
-              <li><img src="./images/check.svg" width="20" height="20" alt="">Carga USB</li>
-              <li><img src="./images/check.svg" width="20" height="20" alt="">Servicio de cafetería</li>
-              <li><img src="./images/check.svg" width="20" height="20" alt="">TV LCD</li>
-              <li><img src="./images/check.svg" width="20" height="20" alt="">Aseos</li>
+              <li class="mt-5"><img class="me-2" src="./images/check.svg" width="20" height="20" alt=""> Ambiente climatizado</li>
+              <li><img class="me-2" src="./images/check.svg" width="20" height="20" alt="">Carga USB</li>
+              <li><img class="me-2" src="./images/check.svg" width="20" height="20" alt="">Servicio de cafetería</li>
+              <li><img class="me-2" src="./images/check.svg" width="20" height="20" alt="">TV LCD</li>
+              <li><img class="me-2" src="./images/check.svg" width="20" height="20" alt="">Aseos</li>
             </ul>
           </div>
         </div>
