--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <nav id="nav" class="navbar navbar-expand-lg ">
       <div class="container-fluid animate__animated animate__fadeInRight ">
         <a class="navbar-brand" href="#"><img class="ms-4" src="./images/universotravel.png" width="400" height="50"
@@ -123,7 +123,7 @@
         <h2 class="conocenosTitulo">Conocenos</h2>
         <p>Somos una empresa de turismo con más de años de experiencia en el rubro, nuestro objetivo es brindar calidad
           y seguridad a nuestros clientes, navega nuestro sitio para conocer más.</p>
-          <button type="button" class="btn btn-danger mt-5"><a href="./pages/imagenes.html"> Nuestras unidades</a></button>
+          <button type="button" class="btn btn-danger mt-3"><a href="./pages/imagenes.html"> Nuestras unidades</a></button>
       </div>
       <div id="carouselExampleSlidesOnly " class="carousel slide col-lg-6" data-bs-ride="carousel">
         <div class="carousel-inner mt-4">
@@ -146,9 +146,9 @@
   <div id="logoServices" class="container-fluid">
     <h2 class="text-center p-4 mb-3">Servicios de nuestras unidades</h2>
     <div class="row d-flex justify-content-evenly pb-5">
-      <img class="col-lg-3" data-aos="flip-up" data-aos-duration="500" src="./images/coffee-svgrepo-com.svg" alt="">
-      <img class="col-lg-3" data-aos="flip-up" data-aos-duration="1000" src="./images/device-hdtv-svgrepo-com.svg" alt="">
-      <img class="col-lg-3" data-aos="flip-up" data-aos-duration="1500" src="./images/image-removebg-preview (2).png" alt="">
+      <img class="col-lg-3 pb-3" data-aos="flip-up" data-aos-duration="500" src="./images/coffee.svg" alt="">
+      <img class="col-lg-3" data-aos="flip-up" data-aos-duration="1000" src="./images/tv.svg" alt="">
+      <img class="col-lg-3" data-aos="flip-up" data-aos-duration="1500" src="./images/sunny.png" alt="">
       <img class="col-lg-3" data-aos="flip-up" data-aos-duration="2000" src="./images/toilet-svgrepo-com.svg" alt="">
     </div>
 
