--- a/pages/imagenes.html
+++ b/pages/imagenes.html
@@ -10,12 +10,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="stylesheet" href="../css/estilosImg.css">
+  <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg ">
+  <header >
+    <nav id="imagesNavBar" class="navbar navbar-expand-lg ">
       <div class="container-fluid animate__animated animate__fadeInRight ">
         <a class="navbar-brand" href="../index.html"><img class="ms-4" src="../images/universotravel.png" width="400" height="50"
             alt=""></a>
@@ -40,14 +40,15 @@
     </nav>
   </header>
   <div class="container-fluid">
-    <div class="row g-2 mt-3  pb-3">
-        <img class="col-lg-7" src="../images/micro1.PNG" alt="">
-        <img class="col-lg-5" src="../images/asiento22.jpg" alt="">     
-        <img class="col-lg-6" src="../images/santiago.jpg" alt="">
-        <img class="col-lg-6" height="500" src="../images/usb.jpg" alt="">      
-        <img class="col-lg-7" src="../images/micro1.PNG" alt="">
-        <img class="col-lg-7" src="../images/bsas.jpg" alt="">
-        <img class="col-lg-5" src="../images/confort1.jpg" alt="">
+    <h2 class="imagesTitle row text-center animate__animated animate__bounceInLeft">Nuestras Unidades</h2>
+    <div class="row g-2  pb-3">
+        <img class="col-lg-4" data-aos="fade-up-right" src="../images/asiento22.jpg" alt="">
+        <img class="col-lg-8" data-aos="fade-up-left" src="../images/micro1.PNG" alt="">     
+        <img class="col-lg-4" data-aos="fade-up-up" src="../images/confort2.jpg" alt="">
+        <img class="col-lg-4" data-aos="fade-up-down" src="../images/usb.jpg" alt="">      
+        <img class="col-lg-4" data-aos="fade-up-right" src="../images/confort4.jpeg" alt="">
+        <img class="col-lg-7" data-aos="fade-up-left" src="../images/bsas.jpg" alt="">
+        <img class="col-lg-5" data-aos="fade-up-down" src="../images/confort1.jpg" alt="">
      
     </div>
     
