--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
   
   </div>
-  <div id="logoServices" class="container-fluid">
+  <div id="logoServices" data-aos="flip-up" data-aos-duration="400" class="container-fluid">
     <h2 class="text-center p-4 mb-3">Servicios de nuestras unidades</h2>
     <div class="row d-flex justify-content-evenly pb-5">
       <img class="col-lg-3 pb-3" data-aos="flip-up" data-aos-duration="500" src="./images/coffee.svg" alt="">
