adding new image

--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
       <div id="carouselExampleSlidesOnly " class="carousel slide col-lg-6" data-bs-ride="carousel">
         <div class="carousel-inner mt-4">
           <div class="carousel-item active">
-            <img src="./images/lapampa4.jpg" class="d-block w-100" alt="...">
+            <img src="./images/busobelisco.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./images/micro1.PNG" class="d-block w-100" alt="...">
+            <img src="./images/busobelisco.jpg"  class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./images/santiago.jpg" class="d-block w-100" alt="...">
+            <img src="./images/busobelisco.jpg"  class="d-block w-100" alt="...">
           </div>
         </div>
       </div>
@@ -143,7 +143,7 @@
 
   
   </div>
-  <div id="logoServices" data-aos="flip-up" data-aos-duration="400" class="container-fluid">
+  <div id="logoServices"  class="container-fluid">
     <h2 class="text-center p-4 mb-3">Servicios de nuestras unidades</h2>
     <div class="row d-flex justify-content-evenly pb-5">
       <img class="col-lg-3 pb-3" data-aos="flip-up" data-aos-duration="500" src="./images/coffee.svg" alt="">
