--- a/pages/imagenes.html
+++ b/pages/imagenes.html
@@ -47,8 +47,8 @@
         <img class="col-lg-4" data-aos="fade-up-up" src="../images/confort2.jpg" alt="">
         <img class="col-lg-4" data-aos="fade-up-down" src="../images/usb.jpg" alt="">      
         <img class="col-lg-4" data-aos="fade-up-right" src="../images/confort4.jpeg" alt="">
-        <img class="col-lg-7" data-aos="fade-up-left" src="../images/bsas.jpg" alt="">
-        <img class="col-lg-5" data-aos="fade-up-down" src="../images/confort1.jpg" alt="">
+        <img class="col-lg-6" data-aos="fade-up-left" src="../images/busobelisco.jpg" alt="">
+        <img class="col-lg-6" data-aos="fade-up-down" src="../images/confort1.jpg" alt="">
      
     </div>
     
